samples/_failures_safe/1761510965_6590c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2752f6c0.c: In function ‘main’:
./samples/SAFE/__tmp_2752f6c0.c:141:9: error: expected declaration or statement at end of input
  141 |         printf("Level %s: %u entries\n", current_level, level_count);
      |         ^~~~~~
./samples/SAFE/__tmp_2752f6c0.c:141:9: error: expected declaration or statement at end of input
